--- a/pages/01.getting-started.md
+++ b/pages/01.getting-started.md
@@ -1,6 +1,6 @@
 # Sear
 
-**a lightweight, reactive data system**
+_a lightweight, reactive data system_
 
 [![](https://img.shields.io/github/v/release/dragonwocky/sear?style=flat-square)](https://github.com/dragonwocky/sear/releases/latest)
 [![](https://img.shields.io/github/license/dragonwocky/sear?color=884ea0&style=flat-square)](https://github.com/dragonwocky/sear/blob/master/LICENSE)
@@ -11,6 +11,57 @@
 [![](https://img.badgesize.io/https://dragonwocky.me/sear/sear.min.js?compression=gzip&label=minified%20%2B%20gzip&style=flat-square)](https://github.com/dragonwocky/sear/blob/master/sear.min.js)
 
 ![](https://img.shields.io/badge/production%20ready-no-b20000?style=flat-square)
+
+One small step for
+
+`test`
+
+```diff
+-man
++ humankind;
+```
+
+```python
+# import modules
+import random
+import time
+
+
+# do (until player cancels the program):
+playagain = 'yes'
+while playagain in {'y', 'yes', ''}:
+    # display introduction
+    print('You are in a land full of dragons. In front of you \n'
+          + 'are two cave entrances. In one cave, the dragon \n'
+          + 'is friendly, and will share his treasure with you. \n'
+          + 'In the other, the dragon is greedy and hungry, and will \n'
+          + 'eat you on sight. \n')
+    # ask player which cave they want to go into
+    cave = ''
+    print('Which cave will you go into? (1 or 2)')
+    cave = input('> ').strip()
+    while cave != '1' and cave != '2':
+        print('That\'s not an option! Try again:')
+        cave = input('> ').strip()
+    # generate a random choice of 1 or 2
+    friendly = random.randint(1, 2)
+    print('You approach the cave...')
+    time.sleep(2)
+    print('It\'s dark and spooky...')
+    time.sleep(2)
+    print('A large dragon jumps out of the entrance, opens his jaws, and...')
+    time.sleep(2)
+
+    # if (player input is the same as random choice): player wins
+    if cave == str(friendly):
+        print('...lays his treasure at your feet!')
+    # otherwise: player loses
+    else:
+        print('...gobbles you down in one bite!')
+
+    # ask player if they would like to play again
+    playagain = input('\nDo you want to play again (Y/N)? ').strip().lower()
+```
 
 ## a what?
 
@@ -49,7 +100,7 @@ capabilities, and does the job well enough.
 
 (to see these in action, go to [the website](https://dragonwocky.me/sear/))
 
-#### app declaration
+### app declaration
 
 include the file! either download the file from [here](https://github.com/dragonwocky/sear/releases/download/v0.5.5/sear.0.5.5.js)
 and include in your own assets, or source it from `https://dragonwocky.me/sear/sear.min.js`. To access a specific version, use `https://dragonwocky.me/sear/dist/sear.<version-number>.js` (replacing `<version-number>` with e.g. `0.5.5`).
