--- a/pages/02.examples.md
+++ b/pages/02.examples.md
@@ -10,6 +10,10 @@ this is ~~text~~. i think. _could_ be wrong, **tho**.
 
 > yeet
 
-```example
-<p>html</p>
+<button>html</button>
+
+```html //example
+<button>html</button>
 ```
+
+hi alex
