operational ✔️ still todo: cli, icon, docs of the doc-generator

--- a/pages/01.getting-started.md
+++ b/pages/01.getting-started.md
@@ -306,7 +306,9 @@ use if you want to preserve everything within that tag -
 content will not be modified/updated in any way.
 
 ```html
-<p :pre>these {{ tags }} will <span :text="client.paragraph">not</span> be parsed!</p>
+<p :pre>
+  these {{ tags }} will <span :text="client.paragraph">not</span> be parsed!
+</p>
 ```
 
 #### :each
@@ -880,7 +882,9 @@ use if you want to preserve everything within that tag -
 content will not be modified/updated in any way.
 
 ```html
-<p :pre>these {{ tags }} will <span :text="client.paragraph">not</span> be parsed!</p>
+<p :pre>
+  these {{ tags }} will <span :text="client.paragraph">not</span> be parsed!
+</p>
 ```
 
 #### :each
